Update remote for undo-tree

--- a/.gitmodules
+++ b/.gitmodules
@@ -226,7 +226,7 @@
 	url = git@github.com:emacs-typescript/typescript.el.git
 [submodule "undo-tree"]
 	path = lib/undo-tree
-	url = git@gitlab.com:tsc25/undo-tree.git
+	url = https://gitlab.com/tsc25/undo-tree.git
 [submodule "use-package"]
 	path = lib/use-package
 	url = git@github.com:jwiegley/use-package.git
