--- a/.gitmodules
+++ b/.gitmodules
@@ -98,6 +98,12 @@
 [submodule "flycheck"]
 	path = lib/flycheck
 	url = git@github.com:flycheck/flycheck.git
+[submodule "geiser"]
+	path = lib/geiser
+	url = git@gitlab.com:emacs-geiser/geiser.git
+[submodule "geiser-mit"]
+	path = lib/geiser-mit
+	url = git@gitlab.com:emacs-geiser/mit.git
 [submodule "general"]
 	path = lib/general
 	url = git@github.com:noctuid/general.el.git
